# MAsync

./: .gitignore  .sync_journal.db  .sync_journal.db-shm  .sync_journal.db-wal  LICENSE  MAsync_main.ipynb  MAsync_supp.ipynb  README.md  pyproject.toml
citenet/: citenet.html  index.html
data/: README.md  ale_coordinates.csv  fnirs_atlas_result.csv  fnirs_coordinates.csv
data/ale/: ale01_thresh_stat_clusters.csv  ale01_thresh_stat_peaks.csv  aleFNIRSSEL_thresh_stat_clusters.csv  aleFNIRSSEL_thresh_stat_peaks.csv  aleFNIRS_thresh_stat_clusters.csv  aleFNIRS_thresh_stat_peaks.csv  aleNoPseudo_thresh_stat_clusters.csv  aleNoPseudo_thresh_stat_peaks.csv  ale_thresh_stat_clusters.csv  ale_thresh_stat_peaks.csv  ale_z_parc.csv
data/atlases/: BzdokTPJ_combined_2mm.csv  README.md  Schaefer100-7_2mm.csv  Schaefer200-7_TianS1_2mm.csv  Yeo7_combined_2mm.csv
data/context/: GABAall_parcellated_data.csv  GABAcl_ale_z.csv  GABAcl_ale_z_JuSpace.csv  GABAcl_ale_z_fdr.csv  GABAcl_parcellated_data.csv  PETmRNA_ale_z.csv  PETmRNA_ale_z_JuSpace.csv  PETmRNA_ale_z_JuSpaceMLR.csv  PETmRNA_ale_z_adjusted.csv  PETmRNA_ale_z_bl.csv  PETmRNA_ale_z_bl_JuSpace.csv  PETmRNA_ale_z_cx.csv  PETmRNA_ale_z_cx_JuSpace.csv  PETmRNA_ale_z_fdr.csv  PETmRNA_ale_z_gm_JuSpace.csv  PETmRNAcells_dominance_analysis.csv  bzdok_distributions.csv  feng_distributions.csv  ficco_distributions.csv  rsn_distributions.csv  schurz_affective_distributions.csv  schurz_cognitive_distributions.csv  schurz_intermediate_distributions.csv  topics_roi_ale_rTPJ.csv  topics_wholebrain.csv
data/datasets/: fmri_coordinates.csv  fnirs_coordinates.csv  mRNA_parcellated_data.csv  pet_parcellated_data.csv
data/distr/: rsn_ale_rTPJ.csv  rsn_macm_rTPJ_MCC.csv  rsn_macm_rTPJ_bin.csv  rsn_macm_rTPJ_lIns.csv  rsn_macm_rTPJ_lTPJ.csv  rsn_macm_rTPJ_rIns.csv  rsn_macm_rTPJ_rTPJ.csv  tpj_ale_rTPJ.csv
data/fd/: ale_rTPJ_BD.txt  ale_rTPJ_PC.txt  conn_rTPJ_conjunction_BD.txt  conn_rTPJ_conjunction_PC.txt
data/fsn/: fsn_result.csv  (+1 more)
fig/: colors.csv  fig1.pptx  fig1.py  fig1B.html  fig2.pptx  fig2.py  fig2B.html  fig3.pptx  fig3.py  fig4.pptx  fig4.py  figS1.py  figS2.py  figS3.pptx  figS3.py  figS4.py  figS5.pptx  figS5.py  figS6.pptx  figS6.py  figS7.pptx  figS7.py  figS8.py  figS9.pptx  figS9.py  utils_radar.py  ~$fig3.pptx
lit/: MAsync_lit1_input_Nam2020.ris  MAsync_lit1_input_priorScreening.ris  MAsync_lit3_cadima_fullText.ris  MAsync_lit4_included_cleaned.ris
publication/: neurobioINS_supp2_tableMRI.xlsx  neurobioINS_supp3_tableNIRS.xlsx
src/: CONNbatch_processHCP.m  ale.py  fnirs.py  fnirs_fun.py  fsn.py  help_fun.py  ipynb_toc.py  juspace_correlations.m  loeo.py  ma_fun.py  neurosynth.py  overlap.py  parcellate_pet.py  rsfc_resample_hcp.py  utils_image.py  utils_io.py  utils_plot.py
(+94 files in other folders)
