[tool.poetry]
name = "masync"
version = "0.0.1"
description = "The Neurobiological Basis of Interpersonal Neural Synchronization: Evidence from a Multimodal Data Fusion Approach"
authors = ["Leon D. Lotter"]

[tool.poetry.dependencies]
python = ">=3.8.8,<3.9.1"
abagen = "^0.1.3"
atlasreader = "^0.1.2"
biopython = "^1.79"
brainsmash = "^0.11.0"
brainspace = "^0.1.3"
duecredit = "^0.9.1"
factor-analyzer = "^0.4.0"
heatmapz = "^0.0.4"
ipykernel = "^6.13.0"
ipython = "^8.2.0"
ipywidgets = "^7.7.0"
joblib = "^1.1.0"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"
networkx = "^2.8"
neuromaps = "^0.0.2"
neurosynth = "^0.3.8"
nilearn = "^0.9.1"
nimare = "^0.0.12rc7"
numpy = "^1.22.3"
pandas = "^1.4.2"
pingouin = "^0.5.2"
pyvis = "^0.2.0"
scipy = "^1.5.0"
seaborn = "^0.11.2"
statsmodels = "^0.13.1"
surfplot = "^0.1.0"
tqdm = "^4.64.0"
wordcloud = "^1.8.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
